# Geoff-Agent-Station

./: .eslintrc.json  .maestro.md  .prettierrc  AGENTS.md  AUTOMATION_ARCHITECTURE.md  BRUTAL_UI_AUDIT.md  BUILD_AUDIT.md  BUILD_OPTIMIZATIONS.md  CASCADE_EXECUTION_REPORT.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  ENHANCEMENT_ARCHITECTURE.md  GITHUB_SETUP_GUIDE.md  IMPLEMENTATION_PLAN.md  MASTER_BUILD_SPEC.md  MULTI_DASHBOARD_ROADMAP.md  OPTIMIZED_ROADMAP.md  QUICK_START.md  README.md  REPAIR_PROTOCOL_v4.md  ROADMAP_ENRICHED_v3.md  ROADMAP_ENRICHED_v4.md  ROADMAP_REVIEW_v2.md  SMOKE_TESTS.md  TEST_EXECUTION_GUIDE.md  TOLARIA_UI_IMPLEMENTATION_PLAN.md  TOOLS_INSTALLATION_GUIDE.md  UI_AUDIT_ASSESSMENT.md  UI_STRATEGIC_PLAN.md  ULTIMATE_AUTOMATION_GUIDE.md  docker-compose.yml  eslint.config.js  fix-app-router.cjs  fix_app.py  index.html  install-automation-tools.ps1  install-tools.ps1  nginx.conf  package-lock.json  (+8 more)
src/: App.css  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  system.rs  validation.rs  vault_detection.rs  window.rs
src-tauri/src/ai/: agents.rs  context.rs  llm_client.rs  mod.rs  prompts.rs
src-tauri/src/automation/: actions.rs  commands.rs  conditions.rs  mod.rs  scheduler.rs  triggers.rs  workflow.rs
src-tauri/src/clipboard/: history.rs  mod.rs  monitor.rs
src-tauri/src/commands/: ai.rs  clipboard.rs  desktop.rs  health.rs  media.rs  mod.rs  productivity.rs  vault.rs
src-tauri/src/git/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/productivity/: focus_mode.rs  mod.rs  pomodoro.rs  time_tracking.rs
(+104 files in other folders)
