[package]
name = "dev-it"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dev_it_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
ai-advanced = []           # Enables ai/prompts, ai/agents, ai/context
clipboard-persistence = [] # Enables clipboard/history, clipboard/monitor
productivity-advanced = []  # Enables productivity/focus_mode, time_tracking, pomodoro

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
yaml-rust = "0.4"
git2 = "0.18"
uuid = { version = "1", features = ["v4"] }
opener = { version = "0.7", features = ["reveal"] }
regex = "1"
sysinfo = "0.30"
dirs = "6.0"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
notify = "6.1"
reqwest = { version = "0.12", features = ["json"] }
arboard = "3.4"

